# Project4

./: Automaton.h  CMakeLists.txt  CommentAutomaton.h  Database.h  DatalogProgram.cpp  EofAutomaton.cpp  Header.cpp  IDAutomaton.h  Interpreter.cpp  Lexer.h  Parameter.h  Predicate.cpp  Relation.cpp  RightParenAutomaton.h  Rule.cpp  Token.cpp  UndefinedAutomaton.h  main.cpp
Project4Final/: AddAutomaton.h  CommaAutomaton.h  CommentAutomaton.cpp  Database.cpp  DatalogProgram.h  EofAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  Header.h  IDAutomaton.cpp  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.h  Lexer.cpp  MultiplyAutomaton.h  Parameter.cpp  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.h  QMarkAutomaton.h  QueriesAutomaton.h  Relation.cpp  Relation.h  Rule.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.h  Tuple.cpp  Tuple.h  UndefinedAutomaton.cpp
